syntax="proto3";

import "cosmos/cosmos.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-proto/testpb";

enum Enumeration {
  One = 0;
  Two = 1;
}

message A {
  Enumeration enum = 1;
  bool some_boolean = 2;
  int32 INT32 = 3;
  sint32 SINT32 = 4;
  uint32 UINT32 = 5;
  int64 INT64 = 6;
  sint64 SING64 = 7;
  uint64 UINT64 = 8;
  sfixed32 SFIXED32 = 9;
  fixed32 FIXED32 = 10;
  float FLOAT = 11;
  sfixed64 SFIXED64 = 12;
  fixed64 FIXED64 = 13;
  double DOUBLE = 14;
  string STRING = 15;
  bytes BYTES = 16;
  B MESSAGE = 17;
  map<string, B> MAP = 18;
  repeated B LIST = 19;
  oneof ONEOF {
    B ONEOF_B = 20;
    string ONEOF_STRING = 21;
  };
  repeated Enumeration LIST_ENUM = 22;
}

message B {
  string x = 1;
}

message Foo {
  string bro = 1;
  google.protobuf.Any bar = 2 [(cosmos_proto.accepts_interface) = "cosmos.gov.Content"];
  google.protobuf.Any baz = 3 [(cosmos_proto.accepts_interface) = "cosmos.authz.Authorization"];
}